--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
 
@@ -15,6 +17,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/mrleaf/maven'
+        }
     }
 }
 
